--- a/032723.html
+++ b/032723.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>March 27</h1>
+<h1>March 27, 2023</h1>
 <p>I'm tired of all the bullshit and I want a place to write memories and drop images that will last forever. Here it is and I hope it becomes a resource to store a lot of good things, and I hope I look at it and share it with others. We'll see.</p>
 <br>
 <a data-flickr-embed="true" href="https://www.flickr.com/photos/141623772@N03/27964265678/in/dateposted-public/" title="First batch"><img src="https://live.staticflickr.com/865/27964265678_3c158f591e_z.jpg" width="640" height="427" alt="First batch"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
