--- a/032723.html
+++ b/032723.html
@@ -8,7 +8,7 @@
   <body>
     <h1>2023</h1>
     <p>"Life's long. What are you gonna do? Sit and wait for the bats."</p>
-    <h1>March 27, 2023</h1>
+    <h1>March 27</h1>
     <p>I'm tired of all the bullshit and I want a place to write memories and drop images that will last forever.
       Here it is and I hope it becomes a resource to store a lot of good things, and I hope I look at it and share it with others.
       We'll see.</p>
